# anzar-desktop

./: .env.example  .gitignore  ARCHITECTURE_REFONTE.md  CHAT_MODULE_FILES.md  CHAT_MODULE_SUMMARY.md  CLEANUP_LOG.md  Dockerfile.backend  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.md  PROJECT_MAP.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  START_HERE.md  VERIFICATION.md  docker-compose.yml  railway.json  requirements.txt  test_memoire_preview.pptx
.git_broken/: config  index
Admin/: README.md  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.ts  vite.config.ts
Admin/src-tauri/: Cargo.toml  tauri.conf.json
Admin/src-tauri/src/: main.rs
Plan IA/: AMELIORATIONS_ISSALAN.md  ANALYSE_COMPLETE_RECOMMANDATIONS.md  ARCHITECTURE_MVP_8_SEMAINES.md  DEMARRAGE_RAPIDE.md  DOCUMENTATION_RECHERCHE_WEB.md  DOCUMENTATION_REFONTE_ISSALAN_COMPLETE.md  MIGRATION_5_AGENTS_A_1_AGENT.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PLAN_ACTION_DETAILLE.md  PROMPT_REFONTE_COMPLETE.md  README_PHASE_2.md  RECOMMANDATIONS.md  RECOMMANDATIONS_PHASE_2.md  RECOMMANDATIONS_PUISSANCE_PERFORMANCE.md  REFONTE_INTERFACE.md  RÉSUMÉ_PHASE_3_COMPLÈTE.md  RÉSUMÉ_PHASE_4_COMPLÈTE.md  SPECIFICATION_RESEAU_OFFLINE_AFRIQUE.md  VÉRIFICATION.md  prompt_trae_solo_afrique.md  start.sh  start_web_api.sh  test_api_gateway.py  test_backend.py  test_final_web_search.py  test_rag_system.py  test_search_simple.py  test_system.py  test_web_search.py  test_web_search_complete.py  test_web_search_simple.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY.md  README.md  SETUP.md  config.py  database.py  docker-compose.yml  example_client.py  main.py  railway.json  requirements.txt  run.py  security.py
desktop/: .env.example  BUILD_DMG.md  CHAT_MODULE_GUIDE.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_FILES.txt  DESIGN_SYSTEM_SUMMARY.md  INTEGRATION_GUIDE.md  PRODUCTION.md  SMOKE_TESTS.md  index.html  package-lock.json  package.json  prompt-cline-fix-profil.md  tailwind.config.js.backup  tailwind.config.ts  tsconfig.json  vite.config.ts  (+2 more)
desktop-app-interface/: README.md  index.html  script.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
mobile/: App.tsx  app.json  (+3 more)
(+399 files in other folders)
